# v8-cffi-lite

./: .gitignore  CMakeLists.txt  README.md
resource/: bar.js  foo.js
src/: main.cpp
